--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Inicio</a></li>
-                <li><a href="#about">Sobre Nosotros</a></li>
+                <li><a href="#about">Nosotros</a></li>
                 <li><a href="#products">Productos</a></li>
             </ul>
         </nav>
