--- a/index.html
+++ b/index.html
@@ -3,83 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Beta Café - El sabor que te inspira">
-    <title>Beta Café</title>
-    <!-- Fuentes de Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <title>Tienda de Café</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Cabecera -->
     <header>
         <div class="logo">
-            <img src="bC.svg" alt="Logo Beta Café">
+            <img src="logo.png" alt="Logo de la tienda">
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#about">Nosotros</a></li>
+                <li><a href="#about">Sobre Nosotros</a></li>
                 <li><a href="#products">Productos</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Sección de Bienvenida -->
-    <section id="home" class="hero">
-        <h1>BIENVENIDO A BETA CAFE</h1>
-        <p>El sabor que te inspira, con la mejor calidad en café.</p>
-        <a href="#products" class="cta-button">Descubre nuestros productos</a>
+    <section class="hero">
+        <h1>Bienvenido a Nuestra Tienda de Café</h1>
+        <p>Descubre los mejores cafés del mundo.</p>
+        <a href="#products" class="cta-button">Ver Productos</a>
     </section>
 
-    <!-- Sección Sobre Nosotros -->
     <section id="about">
         <div class="about-title">
-            <img src="titulo largo beta cafe.svg" alt="Sobre Beta Café">
+            <img src="about.jpg" alt="Sobre Nosotros">
         </div>
-        <p>Beta Café es una marca que busca ofrecer café de la más alta calidad, con un proceso sostenible y responsable. Desde el grano hasta tu taza, cuidamos cada detalle para brindarte una experiencia única.</p>
+        <p>En nuestra tienda ofrecemos una selección de cafés de alta calidad, cultivados en las mejores regiones del mundo.</p>
     </section>
 
-    <!-- Sección de Productos -->
     <section id="products">
-        <h2>NUESTROS PRODUCTOS</h2>
+        <h2>Nuestros Productos</h2>
         <div class="product-list">
             <div class="product-item" id="product1" onclick="openModal('product1')">
-                <img src="cafe prueba.svg" alt="Café Brasil 250grs">
-                <h3>Café Brasil 250g.</h3>
-                <p>Café de tueste medio con notas de cacao y nuez.</p>
-                <p class="price">€5.99</p>
+                <img src="cafe_prueba.svg" alt="Café Etiopía 250g">
+                <h3>Café Etiopía 250g</h3>
+                <p>Café de tueste ligero con notas florales y cítricas.</p>
+                <p class="price">€7.99</p>
             </div>
             <div class="product-item" id="product2" onclick="openModal('product2')">
-                <img src="cafe prueba.svg" alt="Café Premium 500grs">
-                <h3>Café Brasil 500g.</h3>
-                <p>Café 100% orgánico, ideal para los paladares más exigentes.</p>
-                <p class="price">€10.50</p>
+                <img src="cafe_prueba.svg" alt="Café México 500g">
+                <h3>Café México 500g</h3>
+                <p>Café suave con un sabor a chocolate y un toque de nuez.</p>
+                <p class="price">€12.99</p>
+            </div>
+            <div class="product-item" id="product3" onclick="openModal('product3')">
+                <img src="cafe_prueba.svg" alt="Café Sumatra 250g">
+                <h3>Café Sumatra 250g</h3>
+                <p>Café de cuerpo completo con notas terrosas y especiadas.</p>
+                <p class="price">€8.99</p>
+            </div>
+            <div class="product-item" id="product4" onclick="openModal('product4')">
+                <img src="cafe_prueba.svg" alt="Café Perú 500g">
+                <h3>Café Perú 500g</h3>
+                <p>Café orgánico con un sabor suave y un final dulce.</p>
+                <p class="price">€13.99</p>
             </div>
         </div>
     </section>
 
     <!-- Modal -->
-    <div id="product-modal" class="modal" onclick="closeModal()">
-        <div class="modal-content" onclick="event.stopPropagation()">
+    <div class="modal" id="modal">
+        <div class="modal-content">
             <span class="close-btn" onclick="closeModal()">&times;</span>
-            <div class="modal-header">
-                <img id="modal-image" src="" alt="Café">
-                <div class="modal-info">
-                    <h2 id="modal-title"></h2>
-                    <p id="modal-description"></p>
-                    <p id="modal-grain-details"></p>
-                    <p id="modal-roast"></p>
-                    <p id="modal-rating"></p>
-                </div>
+            <img id="modal-image" src="" alt="Imagen del producto">
+            <div class="modal-info">
+                <h2 id="modal-title"></h2>
+                <p id="modal-description"></p>
+                <p id="modal-grain"></p>
+                <p id="modal-roast"></p>
+                <p id="modal-rating"></p>
             </div>
         </div>
     </div>
 
-    <!-- Pie de página -->
-    <footer>
-        <p>&copy; 2024 Beta Café. Todos los derechos reservados.</p>
-    </footer>
-
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
